--- a/js/Assigment01.html
+++ b/js/Assigment01.html
@@ -27,6 +27,9 @@
    button{
     margin-left:30%;
     background-color: burlywood;
+    border: 1.5px solid black;
+    border-radius: 4px;
+    font-size: medium;
    }
 </style>
 <body>
@@ -39,15 +42,14 @@
     </form>
     </div>
     <script>
-        function Submit(){
-        let age = document.getElementById("age").value;
-        if(age>=1 && age<=120){
-            alert("Age is valid");
+        function Submit()
+       {
+            a=document.getElementById("age").value;
+            if(a>=0 && a<=120)
+                alert(a+" years is a valid age.")
+            else
+                alert("Not a valid age. Please enter valid age (0-120)")
         }
-        else{
-            alert("Invalid Age");
-        }
-    }
     </script>
 </body>
 </html>
